<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.nicho92</groupId>
	<artifactId>mtg-ast-java</artifactId>
	<version>0.0.10</version>
	<packaging>jar</packaging>
	<name>MTG Card Analyzer</name>
	<description>Magic Card Oracle Text AST</description>
	<url>https://github.com/nicho92/mtg-ast-java</url>
	<properties>
		<maven.compiler.release>25</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<issueManagement>
		<system>Github</system>
		<url>https://github.com/nicho92/mtg-ast-java/issues</url>
	</issueManagement>
	<organization>
		<name>Nicolas Pihen</name>
		<url>https://github.com/nicho92/</url>
	</organization>
	<developers>
		<developer>
			<id>nicho</id>
			<name>Nicolas Pihen</name>
			<email>nicolas.pihen@gmail.com</email>
			<organizationUrl>https://www.mtgcompanion.org</organizationUrl>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:https://github.com/nicho92/mtg-ast-java.git</connection>
		<developerConnection>scm:git:https://github.com/nicho92/mtg-ast-java.git</developerConnection>
		<url>https://github.com/nicho92/mtg-ast-java</url>
		<tag>HEAD</tag>
	</scm>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<!-- exclude log4j.properties -->
					<excludes>
						<exclude>**/log4j2.xml</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
	          <groupId>org.sonatype.central</groupId>
	          <artifactId>central-publishing-maven-plugin</artifactId>
	          <version>0.8.0</version>
	          <extensions>true</extensions>
		         <configuration>
	             <publishingServerId>central</publishingServerId>
	             <autoPublish>true</autoPublish>
	          </configuration>
	        </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<goals>deploy</goals>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		 <dependency>
	        <groupId>com.google.code.gson</groupId>
	        <artifactId>gson</artifactId>
	       	<version>2.14.0</version>
	    </dependency>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>6.1.0</version>
		    <scope>test</scope>
		</dependency>
	
	</dependencies>
	
</project>